@@ -1,46 +1,54 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.entity.*;
-import com.example.demo.exception.*;
-import com.example.demo.repository.*;
-import com.example.demo.service.*;
+import com.example.demo.entity.Asset;
+import com.example.demo.entity.AssetLifecycleEvent;
+import com.example.demo.exception.ResourceNotFoundException;
+import com.example.demo.repository.AssetLifecycleEventRepository;
+import com.example.demo.repository.AssetRepository;
+import com.example.demo.service.AssetLifecycleEventService;
 import org.springframework.stereotype.Service;
-import java.time.*;
-import java.util.*;
+
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.List;
 
 @Service
 public class AssetLifecycleEventServiceImpl implements AssetLifecycleEventService {
-
     private final AssetLifecycleEventRepository eventRepository;
     private final AssetRepository assetRepository;
 
-    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepository,AssetRepository assetRepository) {
+    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepository, AssetRepository assetRepository) {
         this.eventRepository = eventRepository;
         this.assetRepository = assetRepository;
     }
 
     @Override
     public AssetLifecycleEvent logEvent(Long assetId, AssetLifecycleEvent event) {
+        Asset asset = assetRepository.findById(assetId)
+            .orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
 
-        Asset asset = assetRepository.findById(assetId).orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
+        if (event.getEventType() == null || event.getEventType().trim().isEmpty()) {
+            throw new IllegalArgumentException("Event type is required");
+        }
 
-        if (event.getEventType() == null || event.getEventDescription().isBlank()) {
-            throw new IllegalArgumentException("Event details required");
+        if (event.getEventDescription() == null || event.getEventDescription().trim().isEmpty()) {
+            throw new IllegalArgumentException("Event description cannot be blank");
         }
 
         if (event.getEventDate().isAfter(LocalDate.now())) {
-            throw new IllegalArgumentException("Event date cannot be in future");
+            throw new IllegalArgumentException("Event date cannot be in the future");
         }
 
         event.setAsset(asset);
         event.setLoggedAt(LocalDateTime.now());
-
         return eventRepository.save(event);
     }
 
     @Override
     public List<AssetLifecycleEvent> getEventsForAsset(Long assetId) {
-        assetRepository.findById(assetId).orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
+        if (!assetRepository.existsById(assetId)) {
+            throw new ResourceNotFoundException("Asset not found");
+        }
         return eventRepository.findByAssetIdOrderByEventDateDesc(assetId);
     }
 }
